force-app/main/default/objects/Integration_Request_Child__mdt/Integration_Request_Child__mdt.object-meta.xml
<CustomObject>
    <label>Integration Request Child</label>
    <pluralLabel>Integration Request Child</pluralLabel>
</CustomObject>