force-app/main/default/objects/Integration_Request_Child__mdt/fields/bulk_process__c.field-meta.xml
<CustomField>
    <fullName>bulk_process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>bulk process</label>
    <type>Checkbox</type>
</CustomField>