force-app/main/default/objects/Integration_Request_Child__mdt/fields/Child_Query_Field__c.field-meta.xml
<CustomField>
    <fullName>Child_Query_Field__c</fullName>
    <label>Child Query Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>