force-app/main/default/objects/Integration_Request_Child__mdt/fields/Classname__c.field-meta.xml
<CustomField>
    <fullName>Classname__c</fullName>
    <inlineHelpText>Must implement IntegrationExtension Interface and implement runExtension method</inlineHelpText>
    <label>Classname</label>
    <length>40</length>
    <type>Text</type>
</CustomField>