force-app/main/default/objects/Integration_Request_Child__mdt/fields/Format_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Format_Parameters__c</fullName>
    <label>Format Parameters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>