force-app/main/default/objects/Integration_Request_Child__mdt/fields/GroupBy_Clause__c.field-meta.xml
<CustomField>
    <fullName>GroupBy_Clause__c</fullName>
    <label>GroupBy Clause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>