force-app/main/default/objects/Integration_Request_Child__mdt/fields/Instance_Name__c.field-meta.xml
<CustomField>
    <fullName>Instance_Name__c</fullName>
    <label>Property Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>