force-app/main/default/objects/Integration_Request_Child__mdt/fields/Instance_Type__c.field-meta.xml
<CustomField>
    <fullName>Instance_Type__c</fullName>
    <label>Property Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>List</fullName>
                <default>true</default>
                <label>List</label>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Custom Method</fullName>
            </value>
            <value>
                <fullName>ListItem</fullName>
                <isActive>false</isActive>
                <label>ListItem</label>
            </value>
            <value>
                <fullName>ListWrapper</fullName>
                <isActive>false</isActive>
                <label>ListWrapper</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>