force-app/main/default/objects/Integration_Request_Child__mdt/fields/Parameter_key__c.field-meta.xml
<CustomField>
    <fullName>Parameter_key__c</fullName>
    <inlineHelpText>Only simple values can be passed. eg: record id or a field value</inlineHelpText>
    <label>Parameter key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>