force-app/main/default/objects/Integration_Request_Child__mdt/fields/Parameter_Value__c.field-meta.xml
<CustomField>
    <fullName>Parameter_Value__c</fullName>
    <label>Parameter Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>