force-app/main/default/objects/Integration_Request_Child__mdt/fields/Parent_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_Field__c</fullName>
    <label>Parent Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>