force-app/main/default/objects/Integration_Request_Child__mdt/fields/Parent_Request__c.field-meta.xml
<CustomField>
    <fullName>Parent_Request__c</fullName>
    <description>To be made required later</description>
    <label>Parent Request</label>
    <referenceTo>Integration_Request_Template__mdt</referenceTo>
    <relationshipLabel>Integration Request Child</relationshipLabel>
    <relationshipName>Integration_Request_Child</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>