force-app/main/default/objects/Integration_Request_Child__mdt/fields/ParentGroupField__c.field-meta.xml
<CustomField>
    <fullName>ParentGroupField__c</fullName>
    <label>ParentGroupField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>