force-app/main/default/objects/Integration_Request_Child__mdt/fields/Self_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Self_Template_Name__c</fullName>
    <label>Self Template Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>