force-app/main/default/objects/Integration_Request_Child__mdt/fields/Static_Condition__c.field-meta.xml
<CustomField>
    <fullName>Static_Condition__c</fullName>
    <description>Query condition for the child if required</description>
    <label>Static Condition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>